# parasync

./: Makefile  README.md  pyproject.toml
Formula/: parasync.rb
