[project]
name = "parasync"
authors = [
    {name = "Rio Fujita", email = "rifujita@microsoft.com"},
]
version = "0.1.8"
license = {file = "LICENSE"}
description = "parasync is a parallelized rsync tool written in Python."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.13"
dependencies = [
    "psutil>=7.2.2",
]

[project.optional-dependencies]
test = [
  "pytest>=9",
  "pytest-cov>=7",
]

[project.scripts]
parasync = "parasync.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parasync"]

[project.urls]
Homepage = "https://github.com/rioriost/parasync"
Issues = "https://github.com/rioriost/parasync/issues"

[tool.hatch.build.targets.sdist]
include = [
  "src/parasync/*.py",
  "*.py",
]
exclude = [
  "parasync.rb",
  "uv.lock",
  "dist/.DS_Store",
  ".envrc",
]
